plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.7'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.flow'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'

	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13' // swagger ui
	implementation("me.paulschwarz:spring-dotenv:4.0.0") // env 파일 읽어줌
	implementation("org.postgresql:postgresql:42.7.3") // PostgreSQL 드라이버

	implementation "com.vladmihalcea:hibernate-types-60:2.21.1"

	// JWT 라이브러리
	implementation "io.jsonwebtoken:jjwt-api:0.12.6"
	runtimeOnly "io.jsonwebtoken:jjwt-impl:0.12.6"
	runtimeOnly "io.jsonwebtoken:jjwt-jackson:0.12.6"

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
